# ForgeOS-Device-Agent

./: .env.example  .gitignore  CHANGELOG.md  CODEX_INSTRUCTIONS.md  NEXT_STEPS.md  README.md  USER_GUIDE.md  forgeos-developer-handoff-v2.md  forgeos.code-workspace  project-control.yaml  pyproject.toml
app/: __init__.py  main.py
app/core/: adapter_registry.py  blocker_engine.py  bootstrap.py  codegen_runtime.py  codex_handoff.py  connection_engine.py  connection_playbook.py  event_bus.py  host_capabilities.py  io_utils.py  knowledge.py  knowledge_lookup.py  logging_config.py  models.py  naming.py  orchestrator.py  policy.py  (+12 more)
docs/: process-flows.mmd  release-notes-v0.2.0.md  runtime-architecture.md  sprint-plan.md  testing-checklist.md
knowledge/: README.md  session_outcomes.json  strategy_memory.sqlite3  support_matrix.json
launcher/: forgeos.desktop  launch_forgeos.sh
promotion/: README.md  candidates.json  promotion_rules.json
scripts/: first_run_setup.sh  install_launcher.sh  install_local_tools.sh  verify_environment.sh
tests/: test_autonomous_engagement.py  test_backup_restore.py  test_blocker_engine.py  test_bootstrap.py  test_build_resolver.py  test_codegen_runtime.py  test_codex_handoff.py  test_connection_playbook.py  test_flash_executor.py  test_gui_review_persistence.py  test_image_builder.py  test_learning.py  test_retry_planner_heat.py  test_runtime_architecture.py  test_session_manager.py  test_session_resume_and_promotion.py  test_source_resolver.py  test_state_machine.py  test_strategy_memory.py  test_strategy_selector.py  test_task1_tools.py
(+55 files in other folders)
