[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeos-device-agent"
version = "0.1.0"
description = "ForgeOS local Android device assessment and build orchestration environment."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "ForgeOS" }
]
dependencies = [
  "PySide6>=6.11,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
